--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-
-<html>
-  <head>
-<meta charset="utf-8">
-<title> Best Chocolate Chip Cookies </title>
-
-     <body>
-
-<h1>Best Chocolate Chip Cookies
-  <img src="https://static01.nyt.com/images/2022/02/12/dining/JT-Chocolate-Chip-Cookies/JT-Chocolate-Chip-Cookies-articleLarge.jpg" alt="An image of a cookie" /></h1>
-  </head>
-<p>     This recipe is from my dad and they are a favorite among friends and family.
-  The secret ingredient is the coconut! <em>Be warned</em>, these will fly off of the plate!        </p>
-<!-- Add in section about history of cookies? <h3> History of cookies </h3> <p>Most people don't know the complicated past of the cookie. FINISH -->
-    <h2>Ingredients</h2>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8">
+  <title> Best Chocolate Chip Cookies </title>
+</head>
+<body>
+  <h1>Best Chocolate Chip Cookies<img src="https://static01.nyt.com/images/2022/02/12/dining/JT-Chocolate-Chip-Cookies/JT-Chocolate-Chip-Cookies-articleLarge.jpg" alt="An image of a cookie" /></h1>
+  <p>This recipe is from my dad and they are a favorite among friends and family.
+  The secret ingredient is the coconut! <em>Be warned</em>, these will fly off of the plate!</p>
+  <!-- Add in section about history of cookies? FINISH -->
+  <h3> History of cookies </h3> 
+  <p>Most people don't know the complicated past of the cookie.</p>
+  <h2>Ingredients</h2>
 
     <ul>
       <li> Butter</li>
@@ -40,7 +38,6 @@
         <li>Bake for <strong>10 minutes</strong> or until golden brown.</li>
        </ol>
 
-<p><a href="http://allrecipes.com">Click here</a> to check out my other great recipes.</p>
-
-</html>
+       <p><a href="http://allrecipes.com">Click here</a> to check out my other great recipes.</p>
 </body>
+</html>
